--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<head><title>The title I could not think of a name for></title></head>
+<head><title>hmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm</title></head>
 <body>
 <h1>galaxies are cool</h1>
 </body>
