--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head><title>hmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm</title></head>
 <body>
-<h1>galaxies are cool</h1>
+<h1>galaxies are cool &ampIt;</h1>
 </body>
 </html>
