--- a/index.html
+++ b/index.html
@@ -4,3 +4,16 @@
 <h1>galaxies are cool &ampIt;</h1>
 </body>
 </html>
+
+<html>
+<body>
+<form onSubmit="return false;">
+   <input type="text" name="input1"> +
+   <input type="text" name="input2">
+   <input type="button" value="Enter" 
+    onclick="this.form.output.value =
+ this.form.input1.value + this.form.input2.value;">
+   <input type="text" name="output">
+   </form>
+   </body>
+</html>
